...
            String.format("%02x", it)
        }

        // Load Credentials
        loadCredentials(context, uiUsername, uiPassword)

        Log.d("Session", "Username: $username | $uiUsername")
        Log.d("Session", "Password: $safePassword | $uiSafePassword")
        return uiUsername == username && uiSafePasswordString == safePassword
    }

    fun login(context: Context, username: String, password: String): Boolean {
        this.username = username
        this.safePassword = password
...
